# Emotions

./: Readme.md  user_responses.txt
LaTeX/: main.tex  refs.bib
LaTeX/sections/: analysis.tex  conclusion.tex  findings.tex  introduction.tex  models.tex
LaTeX/sections/models/: decision_tree.tex  logistic_regression.tex  metrics.tex  sequential.tex
LaTeX/templates/: frontpage.tex  import.tex
analysis/: frequency_distribution.py  pyproject.toml  tf_idf.py  words_used.py
data/: newdata.csv
models/: model1.py  model2.py  model3.py  model4.py  old_bert.py
utils/: cleanData.py
