[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Breelef <92298494+Breelef@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
